Styling changes 04 Aug

--- a/app/About.html
+++ b/app/About.html
@@ -3,7 +3,13 @@
 <img src="/app/site-images/aboutpage-top.png" alt="">
 <div class="about-section-wrapper">
     <div class="about-section">
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. At, maiores, minima vel dignissimos temporibus sint accusamus porro atque officiis amet beatae, incidunt vitae. Reiciendis odio doloribus porro omnis rerum, cumque necessitatibus deserunt asperiores nesciunt! Nam ullam quas repudiandae cum mollitia iure dicta pariatur at odio aut. Cum, sit excepturi, assumenda consequuntur reiciendis natus vel dolorum, ullam illum facilis rem deserunt autem fuga! Veritatis repudiandae natus aut in aperiam fuga. Pariatur ut dignissimos debitis ex molestiae illo voluptates. Dignissimos, atque qui.</p>
+        <p>We are a team who take action into helping families and nannies to find a safe, fun 
+            and worthy connection between them, with the objective of transforming children’s life 
+            through love and respect. 
+            
+            As a digital platform we narrow bridges bringing child care professionals closer to 
+            responsible parents, we radically simplify connections and preserve trust between 
+            parties for giving children a caring environment for growing up.</p>
         <div class="img-container"><img src="/app/site-images/aboutpage-about-us.png" alt=""></div>
     </div>
 </div>
