--- a/app/SignUp.html
+++ b/app/SignUp.html
@@ -1,4 +1,5 @@
 <div class="sign-up-wrapper">
+    <img src="/app/site-images/sign-up-top.png">
     <h2>Register</h2>
     <form action="" method="post" id="sign-up-form">
         <div class="radio-btn">
