--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <script src="firebase.js" type="module" defer></script>
     <script src="router.js" defer></script>
     <script src="script.js" type="module" defer></script>
+    <script src="offilneListener.js" type="module" defer></script>
     <script src="app/maps/tomtomAuth.js" defer></script>
     <script src="app/maps/convertPostalCode.js" type="module" defer></script>
     <link rel='stylesheet' type='text/css' href='https://api.tomtom.com/maps-sdk-for-web/cdn/6.x/6.5.0/maps/maps.css'>
