Add Help FAQ and ContactUS

--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
             <div class="div-footer-about">
                 <p class="heading-footer">About</p>
                 <ul class="about-ul">
-                    <li class="about-ul-li"> <a href="#" class="ul-link">About Company</a> </li>
-                    <li class="about-ul-li"> <a href="#" class="ul-link">Help & FAQ</a> </li>
-                    <li class="about-ul-li"> <a href="#" class="ul-link">Contact</a> </li>
-                    <li class="about-ul-li"> <a href="#" class="ul-link">Terms of Service</a> </li>
+                    <li class="about-ul-li"> <a href="#about" class="ul-link">About Company</a> </li>
+                    <li class="about-ul-li"> <a href="#help" class="ul-link">Help & FAQ</a> </li>
+                    <li class="about-ul-li"> <a href="#contactus" class="ul-link">Contact Us</a> </li>
+                    <li class="about-ul-li"> <a href="#terms" class="ul-link">Terms of Service</a> </li>
                 </ul>
             </div>
             <div class="div-footer-user">
