Styling changes2 04 Aug

--- a/app/About.html
+++ b/app/About.html
@@ -68,11 +68,11 @@
 </div>
 <div class="look-options">
     <article>
-        <img src="https://picsum.photos/800/200?rand=317" alt="">
+        <img src="/app/site-images/login-top.png" alt="">
         <h4>Looking for a babbysitting job?</h4>
     </article>
     <article>
-        <img src="https://picsum.photos/800/200?rand=317" alt="">
+        <img src="/app/site-images/register-top.png" alt="">
         <h4>Looking for a nanny for your child?</h4>
     </article>
 </div>
