Styling changes 05 Aug

--- a/app/Help.html
+++ b/app/Help.html
@@ -1,5 +1,5 @@
 <div class="banner">
-    <img src="img/Rectangle 3.png">
+    <img src="/app/site-images/helpandFAQs-top.png">
 
     <div class="sec1">
         <h2>How it works</h2>
