--- a/app/NannyProfileDetails.html
+++ b/app/NannyProfileDetails.html
@@ -21,7 +21,7 @@
                         <li id="saturday">S</li>
                     </ul>
                 </div>
-                <p id="nanny-description"><span class="title">Description:</span> </p>
+                <p id="nannyDescription"><span class="title">Description:</span> </p>
                 <div class="reviews-display">
                     <ul id="reviewsDisplay">
                         <li id="rating1"><i class="fa-solid fa-star rating-inactive"></i></li>
