--- a/app/About.html
+++ b/app/About.html
@@ -3,12 +3,12 @@
 <img src="/app/site-images/aboutpage-top.png" alt="">
 <div class="about-section-wrapper">
     <div class="about-section">
-        <p>We are a team who take action into helping families and nannies to find a safe, fun 
-            and worthy connection between them, with the objective of transforming children’s life 
-            through love and respect. 
-            
-            As a digital platform we narrow bridges bringing child care professionals closer to 
-            responsible parents, we radically simplify connections and preserve trust between 
+        <p>We are a team who take action into helping families and nannies to find a safe, fun
+            and worthy connection between them, with the objective of transforming children’s life
+            through love and respect.
+
+            As a digital platform we narrow bridges bringing child care professionals closer to
+            responsible parents, we radically simplify connections and preserve trust between
             parties for giving children a caring environment for growing up.</p>
         <div class="img-container"><img src="/app/site-images/aboutpage-about-us.png" alt=""></div>
     </div>
@@ -20,56 +20,49 @@
         <article>
             <img src="app/img/Florida.jpg" alt="">
             <h3>Florida Joca</h3>
-            <p>Florida is our project manager. She's into acting and was almost cast as a lead in the Harry Potter Series, but had to withdraw due to conflicting schedules.</p>
         </article>
     </div>
     <div class="team-article">
         <article>
             <img src="app/img/Javier.jpg" alt="">
             <h3>Javier Perez</h3>
-            <p>Javier is a cop who is working undercover as a student at Langara. For the record, we do not really know that. And at present we don't have much details on him.</p>
         </article>
     </div>
     <div class="team-article">
         <article>
             <img src="app/img/Jasmeen.jpg" alt="">
             <h3>Jasmeen Verma</h3>
-            <p>Jasmeen is an avid designer. He adores Leonardo Di Caprio and in his free time watches Di Caprio's movies on a loop. He believes global warming is real. Haha!</p>
         </article>
     </div>
     <div class="team-article">
         <article>
             <img src="app/img/Bihara.png" alt="">
             <h3>Bihara Gandhi</h3>
-            <p>Bihara is a time traveler. His sole responsibility is to edit wikipedia pages on history and correct them (as he saw them), to provide accurate information to our future generation.</p>
         </article>
     </div>
     <div class="team-article">
         <article>
             <img src="app/img/Maria.png" alt="">
             <h3>Maria Garcia Barradas</h3>
-            <p>Maria likes traveling and Singing. She also practices equestrian. She prefers to travel on horseback and do her bit to reduce pollution.</p>
         </article>
     </div>
     <div class="team-article">
         <article>
             <img src="app/img/Akshee.jpg" alt="">
             <h3>Akshee Sharma</h3>
-            <p>Akshee is a designer and loves dancing. On weekends she can be seen at Stanley Park feeding Brazil nuts to Canadian Geese.</p>
         </article>
     </div>
     <div class="team-article">
         <article>
             <img src="app/img/Winall.jpg" alt="">
             <h3>Winall Lopes</h3>
-            <p>Life turned upside down when a cat adopted Winall. He now studies to unlearn, and travels to be at home. Doesn't make sense. </p>
         </article>
     </div>
 </div>
 <div class="look-options">
     <article>
         <img src="/app/site-images/login-top.png" alt="">
-        <h4>Looking for a babbysitting job?</h4>
+        <h4>Looking for a babysitting job?</h4>
     </article>
     <article>
         <img src="/app/site-images/register-top.png" alt="">
