Change lorem ipsum text

--- a/app/Home.html
+++ b/app/Home.html
@@ -1,7 +1,7 @@
 <main class="main-sections">
     <div class="first-section">
-        <p class="first-section-para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur iusto labore
-            harum!</p>
+        <p class="first-section-para">"Find nannies near you and take the first step towards a worry-free childcare experience."
+        </p>
         <form class="search-form">
 
             <!-- <input class="search-input" type="text" id="#searchText" placeholder="Search by location.." name="search2">
