Change lorem ipsum text

--- a/app/Home.html
+++ b/app/Home.html
@@ -1,6 +1,6 @@
 <main class="main-sections">
     <div class="first-section">
-        <p class="first-section-para">"Find nannies near you and take the first step towards a worry-free childcare experience."
+        <p class="first-section-para">Find nannies near you and take the first step towards a worry-free childcare experience.
         </p>
         <form class="search-form">
 
